fdo#44516: Improved label/BC wizard - set paper size